[project]
name = "pdm-pyfuture"
dynamic = ["version"]
description = ""
authors = [
    {name = "Zhan Rongrui", email = "2742392377@qq.com"},
]
dependencies = [
    "pyfuture",
    "loguru",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/zrr1999/pdm-pyfuture.git"
Repository = "https://github.com/zrr1999/pdm-pyfuture.git"

[project.entry-points.pdm]
multibuild = "pdm_pyfuture.__main__:plugin"

[project.entry-points."pdm.build.hook"]
pyfuture = "pdm_pyfuture.build:PyFutureBuildHook"

[tool.ruff]
line-length = 120
src = ["pdm_pyfuture", "tests"]
exclude = ["tests/fixtures"]
target-version = "py310"

[tool.ruff.lint]
select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]

[tool.ruff.isort]
known-first-party = ["pdm_pyfuture"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
includes = ["pdm_pyfuture"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
